<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            tools:context=".MainActivity">
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <ImageView android:id="@+id/store_icon"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/ic_store"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/cost_of_service"
        app:layout_constraintTop_toTopOf="@id/cost_of_service"
        android:contentDescription="@string/store_icon_description"
        android:importantForAccessibility="no"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cost_of_service"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/cost_of_service_tip"
        android:layout_marginStart="40dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cost_of_service_edit_text"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView android:id="@+id/bell_icon"
        android:layout_width="25dp"
        android:layout_height="25dp"
        app:layout_constraintTop_toTopOf="@id/text_under_input"
        app:layout_constraintBottom_toBottomOf="@id/text_under_input"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_service"
        android:contentDescription="@string/bell_icon_description"
        android:importantForAccessibility="no" />

    <TextView android:id="@+id/text_under_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_under_input"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cost_of_service"
        app:layout_constraintStart_toStartOf="@id/cost_of_service"
        android:layout_marginTop="16dp"
        style="@style/Widget.TipTime.TextView"/>

    <RadioGroup android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_under_input"
        app:layout_constraintStart_toStartOf="@id/cost_of_service">
        <RadioButton android:id="@+id/first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_option"
            tools:checked="true"/>
        <RadioButton android:id="@+id/second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_option"/>
        <RadioButton android:id="@+id/third"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/third_option"
            style="Widget.TipTime.CompoundButton.RadioButton"/>
    </RadioGroup>

    <ImageView android:id="@+id/arrow_icon"
        android:layout_width="25dp"
        android:layout_height="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/switch_toggle"
        app:layout_constraintBottom_toBottomOf="@id/switch_toggle"
        android:src="@drawable/ic_round_up"
        android:contentDescription="@string/arrow_icon_description"
        android:importantForAccessibility="no"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_toggle"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/radio_group"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/text_switch"
        android:checked="true"
        app:layout_constraintStart_toStartOf="@id/cost_of_service"
        style="@style/Widget.TipTime.CompoundButton.Switch">
    </com.google.android.material.switchmaterial.SwitchMaterial>

    <Button android:id="@+id/large_button"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:text="@string/button_text"
        app:layout_constraintTop_toBottomOf="@id/switch_toggle"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/cost_of_service"/>

    <TextView android:id="@+id/display_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/large_button"
        android:layout_marginTop="8dp"
        tools:text="Tip Amount: $20"
        style="@style/Widget.TipTime.TextView"/>
</androidx.constraintlayout.widget.ConstraintLayout>